js/src/tests/test262/built-ins/NativeErrors/SyntaxError/proto.js
assert
.
sameValue
(
Object
.
getPrototypeOf
(
SyntaxError
)
Error
)
;
reportCompare
(
0
0
)
;
